# HSE-project-Mini-GPT-cpp

./: .gitignore  CMakeLists.txt  DIMA_NOTES.md  README.md  TASKS&PIPELINE.md  bigram.cpp  test.cpp  tokenizer.cpp  бб.cpp
bigram/: bigram.cpp  test.cpp
bigram/bigrammodel/: bigrammodel.cpp  bigrammodel.h
bigram/dataloader/: dataloader.cpp  dataloader.h
bigram/languagemodel/: languagemodel.cpp  languagemodel.h
dataset/: TokenizerConfig.h  config.cpp  config.h  tokenizer.cpp
dataset/processing/: funcs.cpp  funcs.h
dataset/utils/: utils.h
nanoArkadiiGPT/: config.h  main.cpp  nanoArkadiiGPT.cpp
nanoArkadiiGPT/ArkadiiGPT/: nanoArkadiiGPT.cpp  nanoArkadiiGPT.h
nanoArkadiiGPT/app/: app.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
nanoArkadiiGPT/head/: head.cpp  head.h
nanoArkadiiGPT/multihead_attention/: multihead_attention.cpp  multihead_attention.h
nanoArkadiiGPT/tests/: model_logic_test.cpp  test_main.cpp
nanoArkadiiGPT/transformerblock/: tranformerblock.cpp  transformerblock.h
tokenizer/: tokenizer.cpp
tokenizer/config/: TokenizerConfig.cpp  TokenizerConfig.h
tokenizer/processing/: funcs.cpp  funcs.h
tokenizer/utils/: utils.cpp  utils.h
